# frosk

./: .pre-commit-config.yaml  Cargo.toml  readme.md
.github/workflows/: master.yml
benches/: bench_buffers.rs
sounds/: sounds.ipynb
src/audio/: windows.rs
src/core/: capture.rs  dsp.rs  event.rs  mod.rs  process.rs
