[package]
name = "frosk"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
hound = "3.5.1"
ringbuffer = "0.15.0"
rustfft = "6.2.0"
thiserror = "2.0.11"

[dependencies.windows]
version = "0.54.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Media_KernelStreaming",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.windows-core]
version = "0.54.0"
