[package]
name = "frosk"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
hound = "3.5.1"
plotters = "0.3.7"
rand = "0.8.5"
rustfft = "6.2.0"
thiserror = "2.0.11"

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Media_KernelStreaming",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(windows)'.dependencies.windows-core]
version = "0.54.0"
